AWS/S3/Policies/s3-bucket-logging-enabled.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  creationTimestamp: null
  name: s3-bucket-logging-enabled
spec:
  rules:
    - exclude:
        resources: {}
      generate:
        clone: {}
      match:
        resources:
          kinds:
            - s3.aws.crossplane.io/v1beta1/Bucket
      mutate: {}
      name: s3-bucket-logging-enabled
      validate:
        anyPattern:
          - spec:
              forProvider:
                loggingConfiguration:
                  targetBucket: '*'
          - spec:
              forProvider:
                loggingConfiguration:
                  targetBucketRef:
                    name: '*'
          - spec:
              forProvider:
                loggingConfiguration:
                  targetBucketSelector:
                    matchLabels: '*'
        message: s3-bucket-logging must be enabled. Set spec.forProvider.loggingConfiguration
  validationFailureAction: enforce
status:
  ready: false
