AWS/S3/Policies/s3-bucket-replication-enabled.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  creationTimestamp: null
  name: s3-bucket-replication-enabled
spec:
  rules:
    - exclude:
        resources: {}
      generate:
        clone: {}
      match:
        resources:
          kinds:
            - s3.aws.crossplane.io/v1beta1/Bucket
      mutate: {}
      name: s3-bucket-replication-enabled
      validate:
        message: 's3 bucket replication must be enabled. Set spec.forProvider.replicationConfiguration:'
        pattern:
          spec:
            forProvider:
              replicationConfiguration:
                ^(rules):
                  - status: Enabled
  validationFailureAction: enforce
status:
  ready: false
