AWS/S3/Policies/s3-default-encryption-kms.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  creationTimestamp: null
  name: s3-default-encryption-kms
spec:
  rules:
    - exclude:
        resources: {}
      generate:
        clone: {}
        cloneList: {}
      match:
        resources:
          kinds:
            - s3.aws.crossplane.io/v1beta1/Bucket
      mutate: {}
      name: s3-default-encryption-kms
      validate:
        message: 's3 bucket encryption with KMS must be enabled. Set spec.forProvider.serverSideEncryptionConfiguration::'
        pattern:
          spec:
            forProvider:
              serverSideEncryptionConfiguration:
                rules:
                  - applyServerSideEncryptionByDefault:
                      sseAlgorithm: aws:kms
  validationFailureAction: enforce
status:
  autogen: {}
  ready: false
  rulecount:
    generate: 0
    mutate: 0
    validate: 0
    verifyimages: 0
