AWS/S3/Policies/s3-event-notifications-enabled.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  creationTimestamp: null
  name: s3-event-notifications-enabled
spec:
  rules:
    - exclude:
        resources: {}
      generate:
        clone: {}
      match:
        resources:
          kinds:
            - s3.aws.crossplane.io/v1beta1/Bucket
      mutate: {}
      name: s3-event-notifications-enabled
      validate:
        anyPattern:
          - spec:
              forProvider:
                notificationConfiguration:
                  topicConfigurations:
                    - events: '*'
          - spec:
              forProvider:
                notificationConfiguration:
                  lambdaFunctionConfigurations:
                    - events: '*'
          - spec:
              forProvider:
                notificationConfiguration:
                  queueConfigurations:
                    - events: '*'
        message: s3 event notifications must be enabled. Set spec.forProvider.notificationConfiguration
  validationFailureAction: enforce
status:
  ready: false
